@@ -3,4 +3,6 @@ package com.lorepo.icplayer.client.module.imagesource;
 public interface IViewListener {
 
 	public void onClicked();
+
+	public void onDragged();
 }
